corrected pupil alignment, more animation tweaks

--- a/styles/_intro.scss
+++ b/styles/_intro.scss
@@ -123,7 +123,7 @@ nav {
 		transform: translateY(50%);
 	}
 	to {
-		opacity: 0.95;
+		opacity: 1;
 		transform: translateY(0%);
 	}
 }
@@ -132,7 +132,7 @@ nav {
 		transform: translate(0%, 0%);
 	}
 	to {
-		transform: translate(1%, -1.5%);
+		transform: translate(1%, -2%);
 	}
 }
 @keyframes creepSmile {
@@ -140,6 +140,6 @@ nav {
 		transform: translate(0%);
 	}
 	to {
-		transform: translateY(-6%);
+		transform: translateY(-5%);
 	}
 }
